--- a/interim-report/Files/Chapter4.tex
+++ b/interim-report/Files/Chapter4.tex
@@ -146,7 +146,7 @@ The user interface of the platform was programmed using golang and this resulted
 
 This includes slider buttons to control platform position and orientation. It also includes buttons to allow for data capture  and platform control. The dashboard also has a live plot of incoming data to provide immediate user feedback.
 
-The transport via grpc to the microcontroller was also tested, it showed bidirectional streaming of data to and from the microcontroller making it suitable for communication.
+The transport via TCP to the microcontroller was also tested, it showed bidirectional streaming of data to and from the microcontroller making it suitable for communication.
 
 \section{PCB}
 The schematics from the electrical designs as seen in the appendix were routed to generate a PCB ready for manufacture. This is shown in the 3D render below:
