f(interim-report) switch back to article doc class

--- a/interim-report/Files/Appendices.tex
+++ b/interim-report/Files/Appendices.tex
@@ -1,12 +1,12 @@
 \appendix
 \addcontentsline{toc}{chapter}{Appendices}
-\chapter*{\centering{Appendices}}
+\section*{\centering{Appendices}}
  \pagenumbering{roman}
- \chapter{Stewart Platform and Wind Tunnel Configurations}
+ \section{Stewart Platform and Wind Tunnel Configurations}
  \includepdf[pages=-]{Wind Tunnel Assembly + Stewart}
  \includepdf[pages=-]{Assemby 3 2}
- \chapter{Budget and Timeplan}
- \section{Provisional Budget}
+ \section{Budget and Timeplan}
+ \subsection{Provisional Budget}
  \begin{center}
  \begin{table}[!h]
  \centering
@@ -24,8 +24,8 @@
  \includegraphics[width=0.95\linewidth]{Figures/workplan}
  \end{table}
  \end{center}
-\chapter{HMI code}
- \section{Program}
+\section{HMI code}
+ \subsection{Program}
  \begin{verbatim}
  package main
  
@@ -120,6 +120,6 @@
  
  \end{verbatim}
  
- \chapter{PCB schematics}
- \section{schematics}
+ \section{PCB schematics}
+ \subsection{schematics}
  \includepdf[pages=-]{Figures/schm}
