fix(interim report) toc issue

--- a/interim-report/Files/Appendices.tex
+++ b/interim-report/Files/Appendices.tex
@@ -1,12 +1,12 @@
 \appendix
-\addcontentsline{toc}{chapter}{Appendices}
-\section*{\centering{Appendices}}
+%\addcontentsline{toc}{section}{Appendices}
+\section{Appendices}
  \pagenumbering{roman}
- \section{Stewart Platform and Wind Tunnel Configurations}
+ \subsection{Stewart Platform and Wind Tunnel Configurations}
  \includepdf[pages=-]{Wind Tunnel Assembly + Stewart}
  \includepdf[pages=-]{Assemby 3 2}
- \section{Budget and Timeplan}
- \subsection{Provisional Budget}
+ \subsection{Budget and Timeplan}
+ \subsubsection{Provisional Budget}
  \begin{center}
  \begin{table}[!h]
  \centering
@@ -15,7 +15,7 @@
  \includegraphics{Figures/budget}
  \end{table}
  \end{center}
- \section{Work Plan}
+ \subsubsection{Work Plan}
  \begin{center}
  \begin{table}[!h]
  \centering
@@ -24,8 +24,8 @@
  \includegraphics[width=0.95\linewidth]{Figures/workplan}
  \end{table}
  \end{center}
-\section{HMI code}
- \subsection{Program}
+\subsection{HMI code}
+ \subsubsection{Program}
  \begin{verbatim}
  package main
  
@@ -120,6 +120,6 @@
  
  \end{verbatim}
  
- \section{PCB schematics}
- \subsection{schematics}
+ \subsection{PCB schematics}
+ \subsubsection{schematics}
  \includepdf[pages=-]{Figures/schm}
