--- a/interim-report/Main_file.tex
+++ b/interim-report/Main_file.tex
@@ -177,7 +177,7 @@
   \clearpage
 %----  Bibliography  ----------------------------------------
 \markright{References}                               % Erzeugt Kopfzeile
-\addcontentsline{toc}{chapter}{References}            % Literaturverzeichnis ins Inhaltsverzeichnis
+\addcontentsline{toc}{section}{References}            % Literaturverzeichnis ins Inhaltsverzeichnis
 %\bibliographystyle{Bib/IEEEtran}
 \bibliography{Bib/References}                         % BIBTeX
 \nocite{Lun01} 
